<resources>
    <string name="app_name">PayPerBill</string>

    <string name="btn_login">LOGIN</string>
    <string name="hint_code_number">+91</string>
    <string name="hint_verification_code">Enter Verification Code</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="login_text">Login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_vendor_registration">VenderRegistration</string>
    <string name="title_activity_bank_info_display">BankInfoDisplayActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <color name="colorbackground">@color/bgcolor</color>
    <string name="rupee">\u20B9</string>

    <string-array name="country_arrays">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
    </string-array>
    <string-array name="paymode">
        <item>Cash</item>
        <item>Online</item>
    </string-array>
    <string-array name="months_arrays">
        <item>Select month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="frequency_types">
        <item>Select frequency</item>
        <item>DAILY</item>
        <item>MONTHLY</item>
    </string-array>

    <string-array name="durations_arrays">
        <item>Today</item>
        <item>This week</item>
        <item>This month</item>
        <item>Last 6 months</item>
        <item>Custom</item>
    </string-array>


    <string name="title_activity_vendor_dash_board">VendorDashBoard</string>
    <string name="title_activity_add_newspapers">AddNewspapers</string>
    <string name="title_activity_select_newspaper">SelectNewspaper</string>
    <string name="title_activity_add_subcription">AddSubcription</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_screen">ActivityScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_terms_nconditions">Terms</string>
</resources>
